<resources>
    <string name="app_name">Test the Toast</string>
    <string name="tap_me">Tap Me.</string>
    <string name="counter_here">Counter Here</string>
    <string name="toast">Toast</string>
    <string name="_0">0</string>
    <string name="count">Count</string>
    <string name="toastMessage">Haha N00b!</string>
    <string name="count_down">Count Down</string>
    <string name="zero">ZERO</string>
</resources>
